@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-05T08:22:27Z",
+  "timestamp" : "2023-09-06T01:16:04Z",
   "count_outdated" : 486,
   "uniques_outdated" : 229,
-  "count" : 501,
+  "count" : 502,
   "uniques" : 238,
   "clones" : [
     {
@@ -79,9 +79,9 @@
     },
     {
       "timestamp": "2023-09-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
