@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 1,
   "clones": [
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2023-09-05T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
