@@ -1,3 +1,12 @@
+2023-09-06T01:16:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6091532542 # 764
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-06
+* notice: last 14d: unq all: 1 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 229 486 / 238 501
+* notice: next accum: outdated-unq outdated-all / unq all: 229 486 / 238 502
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-09-05]
+
 2023-09-05T08:22:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6082051001 # 763
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
